--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.7.RELEASE</version>
-        <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.fendou</groupId>
     <artifactId>cjx0323</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>cjx0323</name>
     <description>Demo project for Spring Boot</description>
-
     <properties>
         <java.version>1.8</java.version>
     </properties>
