--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,36 @@
     <packaging>pom</packaging>
     <modules>
         <module>updateBugService</module>
+        <module>springCloudConfig</module>
+        <module>springEureka</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.7.RELEASE</version>
+        <version>2.0.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.fendou</groupId>
     <artifactId>cjx0323</artifactId>
-    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>cjx0323</name>
     <description>Demo project for Spring Boot</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Finchley.M9</spring-cloud.version>
+
+        <commons-lang3.version>3.0</commons-lang3.version>
+        <druid.version>1.1.0</druid.version>
+        <httpclient.version>4.5.5</httpclient.version>
+        <jsoup.version>1.11.1</jsoup.version>
+        <log4j.version>1.2.5</log4j.version>
+        <mysql.version>8.0.11</mysql.version>
+        <pagehelper.version>4.0.0</pagehelper.version>
+        <quartz.version>2.3.0</quartz.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -60,7 +74,42 @@
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>1.9.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <!--仓库配置-->
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 <!--    &lt;!&ndash;仓库配置&ndash;&gt;-->
 <!--    <repositories>-->
 <!--        <repository>-->
