--- a/updateBugService/src/main/resources/application.yml
+++ b/updateBugService/src/main/resources/application.yml
@@ -24,3 +24,7 @@ mybatis:
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://11.1.1.143:33066/scb?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9999/eureka/
