--- a/springCloudConfig/pom.xml
+++ b/springCloudConfig/pom.xml
@@ -17,6 +17,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+        </dependency>
         <!--安全配置-->
         <!--<dependency>-->
         <!--<groupId>org.springframework.boot</groupId>-->
