--- a/updateBugService/pom.xml
+++ b/updateBugService/pom.xml
@@ -50,6 +50,14 @@
             <artifactId>warehouse_connector_core</artifactId>
             <version>1.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
