--- a/updateBugService/src/main/resources/application.yml
+++ b/updateBugService/src/main/resources/application.yml
@@ -1,20 +1,20 @@
-#server:
-#  port: 9901
+server:
+  port: 9901
 
-#spring:
-#  application:
-#    name: update-bug
-#  datasource:
-#    username: xqyydbuser
-#    password: yyDb123456
+spring:
+  application:
+    name: update-bug
+  datasource:
+#    username:  root
+#    password: lssMysql2@
 #    driver-class-name: com.mysql.jdbc.Driver
 #    url: jdbc:mysql://rm-2ze877ndr3zv6a7z3.mysql.rds.aliyuncs.com:3306/scb?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-#    username: root
-#    password: 123456
-#    driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://192.168.218.128:3306/test?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
-#  main:
-#    allow-bean-definition-overriding: true
+    username: root
+    password: lssMysql2@
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://39.106.48.118:3306/imis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
+  main:
+    allow-bean-definition-overriding: true
 logging.level.com.fendou.moudle: debug
 mybatis:
   mapper-locations: classpath:mapping/*.xml
