--- a/updateBugService/src/main/resources/application.yml
+++ b/updateBugService/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 9901
-
 spring:
   application:
     name: update-bug
@@ -14,15 +13,27 @@ spring:
 #    username: xqyydbuser
 #    password: yyDb123456
       #    url: jdbc:mysql://rm-2ze877ndr3zv6a7z3vo.mysql.rds.aliyuncs.com:3306/imis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
+#      虚拟机
+#    username: root
+#    password: 123456
+#    url: jdbc:mysql://192.168.218.128:3306/imis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
+#      预生产
+#    username: root
+#    password: lssMysql2@
+#    url: jdbc:mysql://39.106.48.118:3306/imis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
+#     测试
     username: root
-    password: 123456
-    url: jdbc:mysql://192.168.218.128:3306/imis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
+    password: root123456
+    url: jdbc:mysql://11.1.1.143:33066/imis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
   main:
     allow-bean-definition-overriding: true
 logging.level.com.fendou.moudle: debug
 mybatis:
   mapper-locations: classpath:mapping/*.xml
-
+  configuration:
+    cache-enabled: true
+    lazy-loading-enabled: true
+    aggressive-lazy-loading: false
 #spring.datasource.username=root
 #spring.datasource.password=root123456
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
