--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>untitled</module>
         <module>common</module>
         <module>mqApplication</module>
+        <module>mqApplication2</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
