--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>mqApplication</module>
         <module>mqApplication2</module>
+        <module>esService</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
