--- a/mqApplication2/src/main/resources/application.yml
+++ b/mqApplication2/src/main/resources/application.yml
@@ -12,10 +12,10 @@ logging.level.com.fendou.moudle: debug
 #spring.datasource.url=jdbc:mysql://11.1.1.143:33066/scb?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
 spring:
   rabbitmq:
-    host: 11.1.1.143
+    host: 192.168.218.128
     port: 5672
-#    username: admin
-#    password: admin
+    username: admin
+    password: admin
 #    publisher-confirms: true  #发送确认
 #    publisher-returns: true   #发送失败返回
 #    listener:
