--- a/esService/pom.xml
+++ b/esService/pom.xml
@@ -32,6 +32,11 @@
             <optional>true</optional>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.elasticsearch.client</groupId>-->
+<!--            <artifactId>elasticsearch-rest-client</artifactId>-->
+<!--            <version>6.4.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
