--- a/updateBugService/src/main/resources/application.yml
+++ b/updateBugService/src/main/resources/application.yml
@@ -27,6 +27,11 @@ spring:
     url: jdbc:mysql://11.1.1.143:33066/retailstore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
   main:
     allow-bean-definition-overriding: true
+  mail:
+    username: cjianxun@126.com
+    host: smtp.126.com
+    password: JTSPMIWTGUJDLBIK
+    tos: 942938772@qq.com,cuijianxun@synqci.com
 logging.level.com.fendou.moudle: debug
 mybatis:
   mapper-locations: classpath:mapping/*.xml
