--- a/mqApplication2/src/main/resources/application.yml
+++ b/mqApplication2/src/main/resources/application.yml
@@ -21,8 +21,8 @@ spring:
     listener:
       simple:
 #          acknowledge-mode: none
-#          acknowledge-mode: auto
-          acknowledge-mode: manual
+          acknowledge-mode: auto
+#          acknowledge-mode: manual
           retry:
             enabled: true   #开启消费者重试
 #          max-attempts: 5          #最大重试次数（重试5次还不行则会把消息删掉，默认是不限次数的，次数建议控制在10次以内）
