--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>mqApplication</module>
         <module>mqApplication2</module>
         <module>esService</module>
+        <module>security</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
