--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>mqApplication2</module>
         <module>esService</module>
         <module>security</module>
+        <module>redisService</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
